Fix width overflow, wrong branch name deploy.yaml

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@ body {
 
     /* Occupy full width of viewport */
     > :is(header, footer, main) {
-        width: 100vw;
+        width: 100%;
         margin: 0 auto;
 
 
